infrastructure/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: meiyal/posts

---
apiVersion: v1
kind: Service
metadata:
  name: post-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
   - name: posts
     port: 4000
     targetPort: 4000
